--- a/lab-3-client.yml
+++ b/lab-3-client.yml
@@ -1,2 +1,4 @@
 ---
-lucky-word: "Irish", "Rabbit's Foot", "Serendipity"
+lucky-word: "Irish"
+            "Rabbit's Foot"
+            "Serendipity"
