--- a/lab-3-client.yml
+++ b/lab-3-client.yml
@@ -1,3 +1,3 @@
 ---
 lucky-word: "Irish, Rabbit's Foot, Serendipity, new"
-eurekaServerUri: http://localhost:8010/eureka/
+eurekaServerUri: "http://localhost:8010/eureka/"
