--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,5 @@
 ---
-eurekaServerUri: "http://localhost:8010/eureka/"
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka-secondary:8011/eureka/,http://eureka-tertiary:8012/eureka/,http://eureka-tertiary:8013/eureka/
