--- a/application.yml
+++ b/application.yml
@@ -2,4 +2,4 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://eureka-secondary:8011/eureka/,http://eureka-tertiary:8012/eureka/,http://eureka-tertiary:8013/eureka/
+      defaultZone: http://eureka-secondary:8010
