--- a/lucky-word-client.yml
+++ b/lucky-word-client.yml
@@ -1,4 +1,4 @@
 ---
 wordConfig:
-  luckyWord: Irish
-  preamble: The lucky word is
+  luckyWord: Irish Rabbit's Beard
+  preamble: The lucky phrase should be
